<resources>
    <string name="app_name">MyPokeMonDB</string>
    <string name="bt_add">追加</string>
    <string name="bt_search">検索</string>
    <string name="bt_del">削除</string>
    <string name="bt_reset">初期化</string>
    <string name="tv_id">id:</string>
    <string name="tv_name">名前:</string>
    <string name="tv_hp">HP:</string>
    <string name="tv_add_title">データの追加</string>
    <string name="bt_add_save">追加する</string>
    <string name="tv_search_title">データの検索</string>
    <string name="bt_search_id">idで検索</string>
    <string name="bt_search_name">名前で検索</string>
    <string name="bt_search_hp">HPで検索</string>
    <string name="tv_del_title">データの削除</string>
    <string name="bt_del_id">idで削除</string>
    <string name="bt_del_name">名前で削除</string>
    <string name="bt_del_hp">hpで削除</string>
    <string name="bt_back">戻る</string>
    <string name="compete_add">追加しました。</string>
    <string name="empty_err_add">空欄があります。</string>
    <string name="already_err_add">既に存在するidです。</string>
    <string name="not_exist_err">削除対象が見つかりませんでした。</string>
    <string name="complete_del">削除しました。</string>
    <string name="complete_search">件のデータが見つかりました。</string>
    <string name="dialog_title_del">削除確認</string>
    <string name="dialog_msg_del">以下のデータを削除しますが、よろしいですか？</string>
    <string name="dialog_title_reset">初期化確認</string>
    <string name="dialog_msg_reset">データを初期化しますが、よろしいですか？</string>
    <string name="complete_reset">初期化しました。</string>
    <string name="dialog_btn_ok">はい</string>
    <string name="dialog_btn_ng">いいえ</string>
</resources>